--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	<properties>
+  		<sonar.projectKey>murali-mullapudi_spring-boot-crud-example1</sonar.projectKey>
+ 		<sonar.organization>murali-mullapudi</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
